Checked for duplicated rows

--- a/churn.ipynb
+++ b/churn.ipynb
@@ -9,11 +9,11 @@
     "\n",
     "## **INTRODUCTION**\n",
     "\n",
-    "The dataset contains information about seven thousand and forty three(7,043) customers and twenty-one(21) features describing themselves and the service the telcom company provided them.\n",
+    "The dataset contains information about seven thousand and forty-three (7,043) customers and twenty-one(21) features describing themselves and the service the telecom company provided them.\n",
     "\n",
     "The dataset in this notebook includes information about\n",
     "- Customers who left the last month - the column is called Churn.\n",
-    "- Services that each customer has signed up for - phone, multiple line, internet, online security, online backup, device protection, tech support, and streaming TV and movies.\n",
+    "- Services that each customer has signed up for - phone, multiple lines, internet, online security, online backup, device protection, tech support, and streaming TV and movies.\n",
     "- Customer account information - how long they've been a customer, contract, payment method, paperless billing, monthly charges, and total charges.\n",
     "- Demographic info about customers - gender and if they have partners and dependents."
    ]
@@ -34,13 +34,13 @@
     "- MultipleLines - whether the customer has multiple lines or not.\n",
     "- InternetService - customer's internet service provider(DSL, Fiber optic, No).\n",
     "- OnlineSecurity - whether the customer has online security or not (Yes, No, No internet service).\n",
-    "- OnlineBackup - whether the customemr has online backup or not (Yes, No, No internet service).\n",
-    "- DeviceProtection - whether the customemr has device protection or not (Yes, No, No internet service).\n",
-    "- TechSupport - whether the customemr has tech support or not (Yes, No, No internet service).\n",
-    "- StreamingTV - whether the customemr has streaming TV or not (Yes, No, No internet service).\n",
-    "- StreamingMovies - whether the customemr has streaming movies or not (Yes, No, No internet service).\n",
-    "- Contract - The contract term of the customer (Month-to-month, One year, Two year).\n",
-    "- PaperlessBilling - whether the customemr has paperless billing or not (Yes, No).\n",
+    "- OnlineBackup - whether the customer has online backup or not (Yes, No, No internet service).\n",
+    "- DeviceProtection - whether the customer has device protection or not (Yes, No, No internet service).\n",
+    "- TechSupport - whether the customer has tech support or not (Yes, No, No internet service).\n",
+    "- StreamingTV - whether the customer has streaming TV or not (Yes, No, No internet service).\n",
+    "- StreamingMovies - whether the customer has streaming movies or not (Yes, No, No internet service).\n",
+    "- Contract - The contract term of the customer (Month-to-month, One year, Two years).\n",
+    "- PaperlessBilling - whether the customer has paperless billing or not (Yes, No).\n",
     "- PaymentMethod - the customer's payment method (Electronic check, Mailed check, Bank transfer (automatic), Credit card (automatic))\n",
     "- MonthlyCharges - the amount charged to the customer monthly.\n",
     "- TotalCharges - the total amount charged to the customer.\n",
@@ -64,8 +64,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "import seaborn as sns\n",
-    "sns.set_style('whitegrid')"
+    "import seaborn as sns"
    ]
   },
   {
@@ -545,7 +544,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> The datatype of most of the features in the dataset belongs to the ***object*** datatype. Though most of the features have the object datatype but will converted to any of the numeric datatype to build the Machine Learning model. **The Totalcharges feature should be converted from object to float.**\n",
+    "> Most features in the dataset belongs to the ***object*** datatype. Though most of the features have the object datatype but will converted to any of the numeric datatype to build the Machine Learning model. **The Totalcharges feature should be converted from object to float.**\n",
     "\n",
     "### **FIX THE DATATYPE OF THE _Totalcharges_ FEATURE**"
    ]
@@ -814,20 +813,71 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "> The output above looks cool. Looking at the descriptive statistics of two features from the above output, **_Monthlycharges_** and **_Totalcharges_**, it is expected that the **_Totalcharges_** have higher values than the **_Monthlycharges_**.\n",
     "\n",
-    "### **MAKE _Customerid_ COLUMN THE INDEX COLUMN**\n",
+    "### **CHECK FOR DUPLICATES IN THE DATAFRAME**\n",
     "\n",
-    "> Since the entry on the **_Customerid_** column is unique, it can be made the index column of the DataFrame."
+    "> I will do a check on the DataFrame to see if there are any duplicated datapoint, this is to prevent the model from favouring the same datapoint."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Customerid'].duplicated().sum()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> The result shows that there are no duplicated datapoint in the DataFrame.\n",
+    "\n",
+    "### **MAKE _Customerid_ COLUMN THE INDEX COLUMN**\n",
+    "\n",
+    "> Since the entry of the **_Customerid_** column is unique, it can be made the index column of the DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7032"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df['Customerid'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1108,7 @@
        "9237-HQITU           70.70        151.65   Yes  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1089,7 +1139,7 @@
        "(7032, 20)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,96 +1149,103 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Electronic check', 'Mailed check', 'Bank transfer (automatic)',\n",
-       "       'Credit card (automatic)'], dtype=object)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.Paymentmethod.unique()"
-   ]
-  },
-  {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **REPLACE VALUES IN THE _Paymentmethod_**\n",
+    "### **CHECK _Monthlycharges_ and _TotalCharges_**\n",
     "\n",
-    "> I decided to replace values of the ***Paymentmethod*** with a short string, this is to make the legend for the plot short."
+    "> This check is to see if there be any point where the _Monthlycharges_ is greater than the _Totalcharges_."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Seniorcitizen</th>\n",
+       "      <th>Partner</th>\n",
+       "      <th>Dependents</th>\n",
+       "      <th>Tenure</th>\n",
+       "      <th>Phoneservice</th>\n",
+       "      <th>Multiplelines</th>\n",
+       "      <th>Internetservice</th>\n",
+       "      <th>Onlinesecurity</th>\n",
+       "      <th>Onlinebackup</th>\n",
+       "      <th>Deviceprotection</th>\n",
+       "      <th>Techsupport</th>\n",
+       "      <th>Streamingtv</th>\n",
+       "      <th>Streamingmovies</th>\n",
+       "      <th>Contract</th>\n",
+       "      <th>Paperlessbilling</th>\n",
+       "      <th>Paymentmethod</th>\n",
+       "      <th>Monthlycharges</th>\n",
+       "      <th>Totalcharges</th>\n",
+       "      <th>Churn</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Customerid</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array(['Electronic check', 'Mailed check', 'Bank transfer (automatic)',\n",
-       "       'Credit card (automatic)'], dtype=object)"
+       "Empty DataFrame\n",
+       "Columns: [Gender, Seniorcitizen, Partner, Dependents, Tenure, Phoneservice, Multiplelines, Internetservice, Onlinesecurity, Onlinebackup, Deviceprotection, Techsupport, Streamingtv, Streamingmovies, Contract, Paperlessbilling, Paymentmethod, Monthlycharges, Totalcharges, Churn]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['Paymentmethod'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_dict = {'Electronic check': 'EC',\n",
-    "             'Mailed check': 'MC',\n",
-    "             'Bank transfer (automatic)': 'BT(A)',\n",
-    "             'Credit card (automatic)': 'CC(A)'}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['Paymentmethod'] = df['Paymentmethod'].map(data_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['EC', 'MC', 'BT(A)', 'CC(A)'], dtype=object)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.Paymentmethod.unique()"
+    "df.query('Monthlycharges > Totalcharges')"
    ]
   },
   {
@@ -1196,12 +1253,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> The result above shows that there are no instances where the monthly charges is greater than the total charges.\n",
+    "\n",
     "## **DATA VISUALIZATION**\n",
     "\n",
     "> First, I will like to start with the proportion of the target feature. \n",
     "\n",
     "\n",
     "### **PROPORTION OF THE TARGET FEATURE - CHURN**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.countplot(data=df, x=df['Churn'])"
    ]
   },
   {
