--- a/churn.ipynb
+++ b/churn.ipynb
@@ -1332,11 +1332,13 @@
    "metadata": {},
    "source": [
     "Observations from the plot above:\n",
-    "> **Tenure**: Shows a bimodal distribution, indicating two groups of customers, one with short tenure and another with long tenure. This could reflect new customers versus loyal, long-term customers.\n",
+    "> **_Tenure_**: Shows a bimodal distribution, indicating two groups of customers, one with short tenure and another with long tenure. This could reflect new customers versus loyal, long-term customers.\n",
     "<br>\n",
-    "**Monthly Charges**: Also bimodal, suggesting there are two main customer groups based on the amount they pay each month. One group seems to be paying lower monthly charges, possibly for basic services, while the other pays higher charges, likely for premium services.\n",
+    "**_Monthly Charges_**: Also bimodal, suggesting there are two main customer groups based on the amount they pay each month. One group seems to be paying lower monthly charges, possibly for basic services, while the other pays higher charges, likely for premium services.\n",
     "<br>\n",
-    "**Total Charges**: The distribution is right-skewed, meaning most customers have lower total charges, which could be due to either new customers or customers with lower service usage."
+    "**_Total Charges_**: The distribution is right-skewed, meaning most customers have lower total charges, which could be due to either new customers or customers with lower service usage.\n",
+    "\n",
+    "### **DISTRIBUTION OF CATEGORICAL/OBJECT FEATURES**"
    ]
   },
   {
