Changed values of the Paymentmethod feature

--- a/churn.ipynb
+++ b/churn.ipynb
@@ -1489,7 +1489,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> To get a better understanding of the plot, I created a groupby object to get the count of each Gender that both Churned and didn't. The result of the _groupby_ object shows that more males didn't churn while more females did churn."
+    "> To get a better understanding of the plot, I created a groupby object to get the count of each Gender that both Churned and didn't. The result of the _groupby_ object shows that more males didn't churn while more females did churn.\n",
+    "\n",
+    "#### **CHANGE VALUES IN THE FEATURE**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Paymentmethod'] = df['Paymentmethod'].map({\n",
+    "                            'Electronic check': 'EC',\n",
+    "                            'Mailed check': 'MC',\n",
+    "                            'Bank transfer (automatic)': 'BT (A)',\n",
+    "                            'Credit card (automatic)': 'CC (A)'\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Had to change the values in the _Paymentmethod_ feature so it doesn't affect my plot\n",
+    "\n",
+    "#### **DISTRIBUTION OF OTHER CATEGORICAL/OBJECT DATATYPE**"
    ]
   },
   {
@@ -1526,6 +1551,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> The plot above shows the distribution of the remaining features that are not numeric\n",
+    "\n",
+    "#### **DISTRIBUTION OF OTHER NON-NUMERIC COLUMNS USING THE TARGET FEATURE AS HUE**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
@@ -1559,6 +1593,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> This plot shows how the classes of each feature are distributed \n",
+    "\n",
+    "#### **PLOT EXPLORING THE RELATIONSHIP BETWEEN _Monthlycharges_ and _Totalcharges_**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -1577,6 +1620,13 @@
    "source": [
     "plt.figure(figsize=(10, 4))\n",
     "sns.scatterplot(x='Monthlycharges', y='Totalcharges', hue='Churn', data=df);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **PLOT EXPLORING THE RELATIONSHIP BETWEEN _Tenure_ and _Totalcharges_**"
    ]
   },
   {
