--- a/churn.ipynb
+++ b/churn.ipynb
@@ -65,7 +65,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import pickle"
    ]
   },
   {
@@ -2591,11 +2592,22 @@
     "plt.ylabel('Actual values', size=15)\n",
     "plt.title('Accuracy: 77%, Recall: 79%, Precision: 89%, F1: 83%', size=15)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save the model to a file\n",
+    "with open('model.pkl', 'wb') as file:\n",
+    "    pickle.dump(log, file)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.1 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2611,12 +2623,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.12.2"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "8f582c98de843a0a3e1c7d6581b1a433446744d8b5afe47307aa5397fbf6746b"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
